# MultiAgentCircleMap

./: .gitignore  README.md
MultiAgentCircleMap/: CMakeLists.txt  README.md  package.xml
MultiAgentCircleMap/Results/CircleCounts/: data.csv  land0.csv  land1.csv  land2.csv  main_convergence_land0.csv  main_convergence_land1.csv  main_convergence_land2.csv
MultiAgentCircleMap/Results/CircleCounts/4lands/: land3.csv
MultiAgentCircleMap/config/: constants_iris0.yaml  constants_iris0_backup.yaml  constants_iris1.yaml  constants_iris2.yaml  constants_iris3.yaml  constants_iris4.yaml  default.yaml
MultiAgentCircleMap/include/MultiAgentCircleMap/: Circle.h  CircleVec.h  Graph.h  Image.h  MultiRobotMapper.h  ResultsManager.h  RosData.h  RosHandle.hpp  SingleRobotMapper.h  Visualization.h
MultiAgentCircleMap/launch/: MultiAgentCircleMap_basic.launch  MultiAgentCircleMap_overlying_params.launch
MultiAgentCircleMap/msg/: CircleArray.msg  CircleMsg.msg
MultiAgentCircleMap/src/: Circle.cpp  CircleVec.cpp  Graph.cpp  Hungarian.cpp  Image.cpp  MultiAgentCircleMap_node.cpp  MultiAgentCircleMap_node_iris0.cpp  MultiAgentCircleMap_node_iris0_backup.cpp  MultiAgentCircleMap_node_iris1.cpp  MultiAgentCircleMap_node_iris2.cpp  MultiAgentCircleMap_node_iris3.cpp  MultiAgentCircleMap_node_iris4.cpp  MultiRobotMapper.cpp  ResultsManager.cpp  RosHandle.cpp  SingleRobotMapper.cpp  Utils.h  Visualization.cpp
MultiAgentCircleMap/test/: AlgorithmTest.cpp
